# Saros-Keyboard-Tracker

./: CONTRIBUTING.md  LICENSE  README.md  generate_icon.py  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: settings.rs  stats.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/hooks/: input_hook.rs  mod.rs
src-tauri/src/tray/: menu.rs
src/components/charts/: DailyBarChart.tsx
src/components/heatmap/: GridKey.tsx  KeyCap.tsx  KeyboardLayout.tsx  NavCluster.tsx  NumpadLayout.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/stats/: StatCard.tsx
src/components/ui/: Toggle.tsx
src/context/: ThemeContext.tsx
src/hooks/: useStats.ts
src/lib/: colors.ts  keymap.ts  tauri.ts
src/pages/: DailyReport.tsx  Dashboard.tsx  Heatmap.tsx  MouseStats.tsx  Settings.tsx
src/types/: stats.ts
