[package]
name = "saros-keyboard-tracker"
version = "0.1.0"
description = "Saros Keyboard Tracker — global input statistics"
authors = ["Sarocesch"]
edition = "2021"

[lib]
name = "saros_keyboard_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart     = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store         = "2"

rdev = "0.5"

rusqlite = { version = "0.32", features = ["bundled"] }

tokio = { version = "1", features = ["full"] }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

chrono = { version = "0.4", features = ["serde"] }

log        = "0.4"
env_logger = "0.11"

parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }

[profile.release]
opt-level   = 3
lto         = true
strip       = true
codegen-units = 1
panic       = "abort"
